--- a/createTrainTestSplit.ipynb
+++ b/createTrainTestSplit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/matteopancini/PycharmProjects/recsys-challenge-2022-Pancini-Vitali/Utils/recsys2022DataReader.py:54: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Mike\\PycharmProjects\\recsys-challenge-2022-Pancini-Vitali\\Utils\\recsys2022DataReader.py:56: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv(urmPath)\n"
      ]
     }
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.int64'>'\n\twith 1554640 stored elements in Compressed Sparse Row format>"
+      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.intc'>'\n\twith 1554640 stored elements in Compressed Sparse Row format>"
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: 925 (2.22 %) of 41629 users have no sampled items\n"
+      "Warning: 914 (2.20 %) of 41629 users have no sampled items\n"
      ]
     }
    ],
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 1321444 stored elements in Compressed Sparse Row format>"
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "sps.save_npz('Dataset/URM_train_init', URM_train)"
@@ -105,13 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 1321444 stored elements in Compressed Sparse Row format>"
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "sps.save_npz('Dataset/URM_test', URM_test)"
@@ -137,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: 1523 (3.66 %) of 41629 users have no sampled items\n",
-      "Warning: 1603 (3.85 %) of 41629 users have no sampled items\n",
-      "Warning: 1536 (3.69 %) of 41629 users have no sampled items\n"
+      "Warning: 1505 (3.62 %) of 41629 users have no sampled items\n",
+      "Warning: 1524 (3.66 %) of 41629 users have no sampled items\n",
+      "Warning: 1569 (3.77 %) of 41629 users have no sampled items\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "outputs": [],
    "source": [],
    "metadata": {
