--- a/prova.ipynb
+++ b/prova.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_35740/1378448066.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_53185/1060870599.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  dataset = pd.read_csv('Input/interactions_and_impressions.csv')\n"
      ]
     }
@@ -39,10 +39,15 @@
     "\n",
     "for x in range(len(datasetCOO.data)):\n",
     "    if datasetCOO.data[x] == 0:\n",
-    "        if URM[datasetCOO.row[x]][datasetCOO.col[x]] != 1.0:\n",
-    "                URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.25\n",
+    "        if URM[datasetCOO.row[x]][datasetCOO.col[x]] == 1.0:\n",
+    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.4\n",
+    "        else:\n",
+    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.25\n",
     "    elif datasetCOO.data[x] == 1:\n",
-    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.0\n"
+    "        if URM[datasetCOO.row[x]][datasetCOO.col[x]] == 1.25:\n",
+    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.4\n",
+    "        elif URM[datasetCOO.row[x]][datasetCOO.col[x]] == 0.0:\n",
+    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.0"
    ],
    "metadata": {
     "collapsed": false
@@ -50,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       ...,\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.]])"
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [],
    "metadata": {
