--- a/prova.ipynb
+++ b/prova.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "import pandas as pd\n",
     "import scipy.sparse as sp\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from Utils.recsys2022DataReader import *"
    ],
    "metadata": {
     "collapsed": false
@@ -16,38 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_53185/1060870599.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dataset = pd.read_csv('Input/interactions_and_impressions.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Input/interactions_and_impressions.csv')\n",
-    "\n",
-    "dataset = dataset.drop(columns=['Impressions'])\n",
-    "\n",
-    "datasetCOO = sp.coo_matrix((dataset[\"Data\"].values, (dataset[\"UserID\"].values, dataset[\"ItemID\"].values)))\n",
-    "userIDS = dataset['UserID'].unique()\n",
-    "itemIDS = dataset['ItemID'].unique()\n",
-    "\n",
-    "URM = np.zeros((len(userIDS), len(itemIDS)), dtype=float)\n",
-    "\n",
-    "for x in range(len(datasetCOO.data)):\n",
-    "    if datasetCOO.data[x] == 0:\n",
-    "        if URM[datasetCOO.row[x]][datasetCOO.col[x]] == 1.0:\n",
-    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.4\n",
-    "        else:\n",
-    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.25\n",
-    "    elif datasetCOO.data[x] == 1:\n",
-    "        if URM[datasetCOO.row[x]][datasetCOO.col[x]] == 1.25:\n",
-    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.4\n",
-    "        elif URM[datasetCOO.row[x]][datasetCOO.col[x]] == 0.0:\n",
-    "            URM[datasetCOO.row[x]][datasetCOO.col[x]] = 1.0"
+    "datasetTrain = load_FinalURMTrainInit()"
    ],
    "metadata": {
     "collapsed": false
@@ -59,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       ...,\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.]])"
+      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 1321444 stored elements in Compressed Sparse Row format>"
      },
      "execution_count": 3,
      "metadata": {},
@@ -67,7 +39,7 @@
     }
    ],
    "source": [
-    "URM"
+    "datasetTrain"
    ],
    "metadata": {
     "collapsed": false
@@ -75,7 +47,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1.  , 1.  , 1.  , ..., 1.  , 1.25, 1.25])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetTrain.data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1.  , 1.  , 1.  , ..., 1.  , 1.25, 1.25])"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binaryDataset = datasetTrain\n",
+    "binaryDataset.data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.0"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binaryDataset.data[0]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "for i in range(len(binaryDataset.data)):\n",
+    "    binaryDataset.data[i] = 1.0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1., 1., 1., ..., 1., 1., 1.])"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binaryDataset.data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
