ials upgrade + prova catboost

--- a/prova.ipynb
+++ b/prova.ipynb
@@ -19,7 +19,15 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "datasetTrain = load_FinalURMTrainInit()"
+    "types = pd.read_csv('Input/data_ICM_type.csv')\n",
+    "types = types.drop(columns=['data'], axis=1)\n",
+    "types = types.rename(columns={'feature_id': 'type'})\n",
+    "\n",
+    "\n",
+    "typesFiltered = types[types['item_id'] <= 24506]\n",
+    "itemsID = typesFiltered['item_id'].to_numpy()\n",
+    "typesArray = typesFiltered['type'].to_numpy()\n",
+    "ICM = np.zeros((24507, 7), dtype=float)"
    ],
    "metadata": {
     "collapsed": false
@@ -31,7 +39,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<41629x24507 sparse matrix of type '<class 'numpy.float64'>'\n\twith 1321444 stored elements in Compressed Sparse Row format>"
+      "text/plain": "array([    0,     1,     2, ..., 24504, 24505, 24506])"
      },
      "execution_count": 3,
      "metadata": {},
@@ -39,7 +47,7 @@
     }
    ],
    "source": [
-    "datasetTrain"
+    "itemsID"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +59,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1.  , 1.  , 1.  , ..., 1.  , 1.25, 1.25])"
+      "text/plain": "array([1, 3, 4, ..., 1, 4, 1])"
      },
      "execution_count": 4,
      "metadata": {},
@@ -59,7 +67,7 @@
     }
    ],
    "source": [
-    "datasetTrain.data"
+    "typesArray"
    ],
    "metadata": {
     "collapsed": false
@@ -67,20 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1.  , 1.  , 1.  , ..., 1.  , 1.25, 1.25])"
+      "text/plain": "       item_id  type\n0            0     1\n1            1     3\n2            2     4\n3            3     1\n4            4     3\n...        ...   ...\n19625    24502     1\n19626    24503     4\n19627    24504     1\n19628    24505     4\n19629    24506     1\n\n[19630 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>item_id</th>\n      <th>type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>19625</th>\n      <td>24502</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19626</th>\n      <td>24503</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>19627</th>\n      <td>24504</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19628</th>\n      <td>24505</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>19629</th>\n      <td>24506</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>19630 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "binaryDataset = datasetTrain\n",
-    "binaryDataset.data"
+    "typesFiltered"
    ],
    "metadata": {
     "collapsed": false
@@ -88,31 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1.0"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binaryDataset.data[0]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "for i in range(len(binaryDataset.data)):\n",
-    "    binaryDataset.data[i] = 1.0"
+    "for x in range(len(itemsID)):\n",
+    "    ICM[itemsID[x]][typesArray[x]-1] = 1"
    ],
    "metadata": {
     "collapsed": false
@@ -120,19 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1., 1., 1., ..., 1., 1., 1.])"
+      "text/plain": "array([[1., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 1., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       ...,\n       [1., 0., 0., ..., 0., 0., 0.],\n       [0., 0., 0., ..., 0., 0., 0.],\n       [1., 0., 0., ..., 0., 0., 0.]])"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "binaryDataset.data"
+    "ICM"
    ],
    "metadata": {
     "collapsed": false
