--- a/XGBoost_All.ipynb
+++ b/XGBoost_All.ipynb
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "URM_train = load_BinURMTrainInit()\n",
-    "URM_validation = load_BinURMTest()"
+    "URM_train = load_1K_FinalURMTrain()\n",
+    "URM_validation = load_1K_FinalURMValid()"
    ],
    "metadata": {
     "collapsed": false
