--- a/XGBoost_All.ipynb
+++ b/XGBoost_All.ipynb
@@ -645,6 +645,24 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Here you need to train all your models on the whole dataset and then recreate the same dataframe as before!"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Submission creation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "outputs": [],
